--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>Atividade Prática 3</h1>
     <h2>Revisão 0</h2>
     <p>Está é a revisão 0 do projeto que estou executando, primeiro commit.</p>
+
+    <h2>Revisão 1</h2>
+    <p>Adicionando imagem ao site</p>
+    <img src="img/images.jpeg" alt="">
     
 </body>
 </html>
